26-04-2004 :
 - Corrected a bug in Windows which causes wx-console to crash when
     typing quit before exiting the application.

25-04-2004 :
 - general : status text is more often used
 - wxbRestorePanel : restore aborted if there's no client or no fileset
 - wxbRestorePanel : corrected problem if one double clicks on a
     directory X in the left "tree" window when the directory is 
     not yet open, instead of selecting the directory and everything 
     below, it opens the directory and nothing is selected.
 - wxbRestorePanel : first client is selected when restore
     mode starts.
 - wxbRestorePanel : when the director is building tree, 
     changes are made to the status in the gauge.
 - wxbRestorePanel : Cursor set to hourglass when working
 - wxbMainFrame : Automatically scrolling to the bottom of 
     console text control.

24-04-2004 :
 - wxbMainFrame : When starting wx-console, the initial key 
      input focus is set into the command window.
 - wxbMainFrame : the user is now prompted when an 
      unexpected "question" is asked).
 - wxbRestorePanel : configure is allowed to change fileset
 - wxbRestorePanel : using dot commands (.clients, .filesets)
 - console_thread : implemented prompt and heartbeat messages

23-04-2004 :
 - general : Don't concatenate lines in csprint, but in wxbDataParser
         (necessary for dot commands)

22-04-2004 :
 - wxbRestorePanel : improved restore appearance
 - wxbRestorePanel : configure is allowed to change client

19-04-2004 :
 - wxbRestorePanel : Locked configure items until first 
   configuration is received
 - wxbRestorePanel : Removed estimate, which slows the restore
   process

18-04-2004 :
 - wxbRestorePanel : wxTreeCtrl::GetParent changed in 
   GetItemParent (thanks to Luca Berra)
 - wxbRestorePanel : The user can now change a part of restore
    configuration

17-04-2004 :
 - wxbRestorePanel modified to use wxbDataParsers
 - created wxbDataTokenizer, which fetches commands results