@@ -141,6 +141,8 @@ private:
 
    static wxbMainFrame *frame; /* this */
    
+   bool lockedbyconsole; /* true if the panels have been locked by something typed in the console */
+   
    // any class wishing to process wxWindows events must use this macro
    DECLARE_EVENT_TABLE()
 };
