@@ -1,3 +1,7 @@
+27-04-2004 :
+ - wxbMainFrame : others panels are locked when a command is ran
+     directly by typing in the console.
+     
 26-04-2004 :
  - Corrected a bug in Windows which causes wx-console to crash when
      typing quit before exiting the application.
